# Mapatorious

./: .gitignore  CMakeLists.txt  README  pom.xml  project.clj
src/java/kylm/main/: RandomSentences.java
src/java/kylm/model/ngram/: BranchNode.java  NgramLM.java  NgramNode.java
src/java/kylm/model/ngram/reader/: ArpaNgramReader.java  NgramReader.java
src/java/kylm/model/ngram/smoother/: MKNSmoother.java
src/java/kylm/util/: KylmTextUtils.java
src/main/clojure/: england  mapatorius.clj  markov.clj  stub.clj
src/main/clojure/util/: hull.clj  lfsr.clj  random.clj  select.clj  shrink.clj
src/main/clojure/util/random/: alternating.clj  lfsr.clj  shrink.clj  stop.clj
src/main/resources/corpora/: aboriginal
src/mapatorius/: helloworld.clj  markov.clj
src/mapatorius/resources/corpora/: england  germany
src/mapatorius/util/: hull.clj  random.clj  select.clj  simplex.clj
src/mapatorius/util/hull/: test.clj
src/mapatorius/util/random/: alternating.clj  lfsr.clj  shrink.clj  stop.clj
src/test/: run.clj
src/test/clojure/: run.clj
test/: tests.clj
test/ogl/: cloud.clj  hull.clj  lines.clj  sample.clj  stairs.clj
